убрал ненужный propeties

--- a/SteamLogger/CreateSteamAuthLink.resx
+++ b/SteamLogger/CreateSteamAuthLink.resx
@@ -70,4 +70,16 @@ RU:
 кнопку с надписью "Variant 1"
 2) Подключите ваш телефон к компьютеру и нажмите на кнопку с надписью "Variant 2"</value>
   </data>
+  <metadata name="ENAddition.Locked" type="System.Boolean, System.Private.CoreLib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e">
+    <value>True</value>
+  </metadata>
+  <metadata name="button1.Locked" type="System.Boolean, System.Private.CoreLib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e">
+    <value>True</value>
+  </metadata>
+  <metadata name="v1.Locked" type="System.Boolean, System.Private.CoreLib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e">
+    <value>True</value>
+  </metadata>
+  <metadata name="v2.Locked" type="System.Boolean, System.Private.CoreLib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e">
+    <value>True</value>
+  </metadata>
 </root>
