--- a/SteamLogger/Form1.resx
+++ b/SteamLogger/Form1.resx
@@ -433,28 +433,28 @@
   <data name="&gt;&gt;generateGuard.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
-  <data name="edit.Location" type="System.Drawing.Point, System.Drawing.Primitives">
+  <data name="settingsBut.Location" type="System.Drawing.Point, System.Drawing.Primitives">
     <value>184, 41</value>
   </data>
-  <data name="edit.Size" type="System.Drawing.Size, System.Drawing.Primitives">
-    <value>75, 23</value>
+  <data name="settingsBut.Size" type="System.Drawing.Size, System.Drawing.Primitives">
+    <value>75, 24</value>
   </data>
-  <data name="edit.TabIndex" type="System.Int32, System.Private.CoreLib">
+  <data name="settingsBut.TabIndex" type="System.Int32, System.Private.CoreLib">
     <value>14</value>
   </data>
-  <data name="edit.Text" xml:space="preserve">
-    <value>edit acco...</value>
+  <data name="settingsBut.Text" xml:space="preserve">
+    <value>Settings</value>
   </data>
-  <data name="&gt;&gt;edit.Name" xml:space="preserve">
-    <value>edit</value>
+  <data name="&gt;&gt;settingsBut.Name" xml:space="preserve">
+    <value>settingsBut</value>
   </data>
-  <data name="&gt;&gt;edit.Type" xml:space="preserve">
+  <data name="&gt;&gt;settingsBut.Type" xml:space="preserve">
     <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;edit.Parent" xml:space="preserve">
+  <data name="&gt;&gt;settingsBut.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
-  <data name="&gt;&gt;edit.ZOrder" xml:space="preserve">
+  <data name="&gt;&gt;settingsBut.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, System.Private.CoreLib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e">
